Craete HTML dropdown selections

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     
 </head>
 <body>
+    <div class = "navbar">
+      <select name="" id="makeDropDown"> </select>
+      <select name="" id="transmissionDropDown"> </select>
+      <select name="" id="driveDropDown"></select>
+      <button id="search"> Search </button>
+    </div>
+    <div id="cars-container">
+
+    </div>
     <script src="JS/index.js"></script>
 </body>
 </html>
