Configure text search area and add event listener

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class = "navbar">
-      <select name="" id="makeDropDown"> </select>
+      <input id="textSearch" type="text" placeholder="Looking for something specific?" autofocus="">
     
       <button id="search"> Search </button>
     </div>
