Centering the h1 tag

--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
       <button id="search"> Search </button>
     </div>
     <div id="cars-container">
-      <div class="list-group">
-        <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
-          The current link item
-        </a>
-        <a href="#" class="list-group-item list-group-item-action">A second link item</a>
-        <a href="#" class="list-group-item list-group-item-action">A third link item</a>
-        <a href="#" class="list-group-item list-group-item-action">A fourth link item</a>
+      <div class="card" style="width: 18rem;">
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">An item</li>
+          <li class="list-group-item">A second item</li>
+          <li class="list-group-item">A third item</li>
+        </ul>
       </div>
     </div>
     <div class="d-grid gap-2 col-6 mx-auto">
