CSS and bootstrap styling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class = "navbar">
       </nav>
-      <input id="textSearch" type="text" placeholder="Looking for something specific?" autofocus="">
+      <input id="textSearch" type="text" placeholder="Looking for something specific?(nissan, toyota, audi, bmw)" autofocus="">
       
       <button id="search"> Search </button>
     </div>
